# wrappergen

./: .gitignore  .prettierrc.json  CMakeLists.txt  package-lock.json  package.json  tsconfig.json
ccSrc/include/: Class.hh  Constructor.hh  Method.hh  MethodFinder.hh  Param.hh
ccSrc/src/: Class.cc  Constructor.cc  Method.cc  MethodFinder.cc  Param.cc  main.cc
src/: index.ts  tsconfig.json
src/ccConnector/: index.ts
src/config/: ConfigAssembler.ts  ConfigReader.ts  index.ts
src/exe/: main.ts  test.ts
src/parser/: Parsed.ts  Parser.ts  ProjectManager.ts  index.ts
templates/: index.hh.mustache  index.ts.mustache  types.ts.mustache  wrapper.cc.mustache  wrapper.hh.mustache  wrapper.ts.mustache
